The display now has a flex direction of colum in order to show both the display memory and display number one on top of the another. Number-0 button now its aligned-self with more than triple the widht of its silbing buttons, and a fix height.

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ h1 {
 
 .display {
     display: flex;
+    flex-direction: column;
     justify-content: flex-end;
     align-items: flex-end;
     margin: 15px 0 5px 0;
@@ -24,6 +25,10 @@ h1 {
     width: 350px;
     align-self: center;
     border: 1px solid black;
+}
+
+.displayed-memory {
+    margin: 0 15px 0 0;
 }
 
 .displayed-number {
@@ -47,7 +52,7 @@ h1 {
 
 .buttons-container {
     display: flex;
-    flex: auto;
+    flex: 1;
     width: 350px;
     gap: 15px;
     margin: 5px 0 5px 0;
@@ -68,19 +73,15 @@ h1 {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(5, 1fr);
     row-gap: 5px;
-    position: relative;
 }
 
-.operator-equal {
-    position: absolute;
-    height: 120px;
-    width: 100%;
-    bottom: -70px;
+/*Here I want to make the operator equal button twice the size of its sibling divs.*/ 
+.operator-equal { 
+    
 }
 
-.number-0 {
-    align-self: flex-start;
+#number-0 {
+    align-self: self-end;
     height: 50px;
-    width: 250.25px;
-    margin: 5px 0 15px 25px;
+    width: 315%;
 }
